Ported to 1.18